Updated layout, home, and zaheer components for enhanced responsiveness. In layout.component.scss, adjusted the width and max-width of outer-container and container to 995px, refining UI flow by optimizing positioning of arrow-container and sidebar classes. Implemented similar max-width adjustment to home.component.scss's container class, offering consistent alignment and presentation across different screen sizes. Further refinement in zaheer.component.scss by setting max-width on class zaheer-gif to ensure consistent presentation. Preliminary testing of media queries in home.component.scss marked for future development. Minor tweaks in layout.component.scss, such as the removal of z-index in class arrow-container and position refinement in class sidebar, contribute to smoother transitions and a more streamlined layout structure.

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,7 +6,7 @@
   font-weight: 349;
 }
 .container {
-  width:80%;
+  max-width:995px;
   margin:0 auto;
   // margin-top:-21px;
   // the following is to ensure there are no margins between the h1, the .title, and the .container
