--- a/src/app/zaheer-gif/zaheer-gif.component.scss
+++ b/src/app/zaheer-gif/zaheer-gif.component.scss
@@ -8,7 +8,7 @@
 
 .zaheer-gif {
     height: auto;
-    width: 40%;
+    max-width: 995px;
     pointer-events: none;
     user-select: none;
 }
